<resources>
    <string name="app_name">SECONDAPP</string>
    <string name="title_name">温度转换</string>
    <string name="inp_text">请输入需转换的温度</string>
    <string name="t1"><![CDATA[摄氏度℃>>>华氏度℉]]></string>
    <string name="t2"><![CDATA[华氏度℉>>>摄氏度℃]]></string>
    <string name="out_text">结果</string>
    <string name="msg_error_input">请输入有效温度值</string>
    <string name="fahren">华氏</string>
    <string name="celsius">摄氏</string>
    <string name="to_fahren">度->华氏温度</string>
    <string name="to_celsius">度->摄氏温度</string>
    <string name="hint_text">input rmb</string>
    <string name="btn_dollor_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_opentext">config</string>
    <string name="btn_config_name">config</string>
    <string name="menu_setting">menu</string>
    <string name="open_listset">open_list</string>
    <string name="searchhint">请输入关键词</string>
    <string name="search_btn">搜素</string>


</resources>
